# betula

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
betula_capture/: Cargo.toml
betula_capture/examples/: betula_capture.rs
betula_capture/src/: capture.rs  lib.rs
betula_capture/src/nodes/: capture_node.rs
betula_common/: Cargo.toml
betula_common/src/: callback.rs  control.rs  lib.rs  server_thread.rs  tree_support.rs  type_support.rs
betula_common/src/config/: mod.rs
betula_common/src/loader/: mod.rs
betula_common/src/nodes/: delay_node.rs  mod.rs  parallel_node.rs  time_node.rs
betula_common/src/support/: mod.rs
betula_core/: Cargo.toml
betula_core/src/: as_any.rs  basic.rs  blackboard.rs  lib.rs
betula_core/src/nodes/: failure.rs  failure_node.rs  fallback.rs  mod.rs  running_node.rs  selector.rs  selector_node.rs  sequence.rs  sequence_node.rs  success.rs  success_node.rs
betula_demo/: Cargo.toml
betula_demo/src/: main.rs
betula_editor/: Cargo.toml
betula_editor/src/: editor.rs  egui_util.rs  lib.rs  ui.rs  viewer.rs  widgets.rs
betula_egui/: Cargo.toml
betula_egui/examples/: minimal.rs  svg_test.rs
betula_egui/src/: core.rs  editor.rs  lib.rs  ui.rs  viewer.rs  widgets.rs
betula_egui/src/nodes/: common.rs  core.rs  mod.rs
betula_enigo/: Cargo.toml
betula_enigo/src/: lib.rs  preset.rs  util.rs
betula_enigo/src/nodes/: cursor_scanner_node.rs  enigo_cursor_node.rs  enigo_instance_node.rs  enigo_node.rs  enigo_read_node.rs  enigo_token_node.rs  mod.rs
betula_focus/: Cargo.toml
betula_focus/examples/: test_betula_focus.rs
betula_focus/src/: lib.rs  linux.rs  nodes.rs  windows.rs
betula_global_hotkey/: Cargo.toml
betula_global_hotkey/examples/: test_global_hotkey.rs
betula_global_hotkey/src/: lib.rs  linux.rs  windows.rs
betula_hotkey/: Cargo.toml
betula_hotkey/examples/: test_betula_hotkey.rs
betula_hotkey/src/: lib.rs  linux.rs  windows.rs
betula_hotkey/src/nodes/: hotkey_instance_node.rs  hotkey_node.rs  mod.rs
betula_image/: Cargo.toml
betula_image/examples/: image_pattern.rs  image_pattern_match.rs
betula_image/src/: lib.rs  pattern_match.rs
betula_image/src/nodes/: capture_node.rs  image_capture_cursor_node.rs  image_capture_node.rs  image_match_node.rs  image_write_cursor_node.rs  mod.rs
betula_overlay/: Cargo.toml
betula_overlay/src/: lib.rs
betula_overlay/src/client_server/: client.rs  daemon.rs  mod.rs
betula_overlay/src/nodes/: mod.rs  overlay_instance_node.rs  overlay_text_node.rs
betula_std/: Cargo.toml
betula_std/src/: lib.rs
betula_std/src/nodes/: block_reset_node.rs  delay_node.rs  failure_node.rs  force_success_node.rs  if_enum_node.rs  if_then_else_node.rs  if_time_exceeds_node.rs  mod.rs  negate_node.rs  parallel_node.rs  retry_node.rs  running_node.rs  selector_node.rs  sequence_node.rs  status_read_node.rs  status_write_node.rs  string_write_node.rs  success_node.rs  time_node.rs  time_slice_node.rs
betula_window_focus/: Cargo.toml
betula_window_focus/examples/: test_betula_focus.rs
betula_window_focus/src/: lib.rs  linux.rs  nodes.rs  windows.rs
betula_wm/: Cargo.toml
betula_wm/examples/: betula_wm.rs
betula_wm/src/: lib.rs  linux.rs  windows.rs
betula_wm/src/nodes/: cursor_position.rs  mod.rs  window_focus.rs
