[workspace]
resolver = "2"

members = [
    "betula_core",
    "betula_common",
    "betula_editor",
    "betula_enigo",
    "betula_hotkey",
    "betula_std",
    "betula_demo",
    "betula_wm",
    "betula_image",
    "betula_overlay",
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
#[profile.dev]
# Enable some optimisations, but not all of it.
#opt-level = 2
# Only using line numbers as debug information shaves off 10 seconds on linking the viewer.
#debug = 1
# Disable lto, it's slow for development
#lto = false

[workspace.dependencies]
betula_core = { version = "0.0.1", path = "betula_core", default-features = false }
betula_image = { version = "0.0.1", path = "betula_image", default-features = false }
betula_editor = { version = "0.0.1", path = "betula_editor", default-features = false }
betula_common = { version = "0.0.1", path = "betula_common", default-features = false }
betula_enigo = { version = "0.0.1", path = "betula_enigo", default-features = false }
betula_std = { version = "0.0.1", path = "betula_std", default-features = false }
betula_hotkey = { version = "0.0.1", path = "betula_hotkey", default-features = false }
betula_demo = { version = "0.0.1", path = "betula_demo", default-features = false }
betula_wm = { version = "0.0.1", path = "betula_wm", default-features = false }
betula_overlay = { version = "0.0.1", path = "betula_overlay", default-features = false }
