[workspace]
resolver = "2"

members = [
  "betula_core",
  "betula_common",
  "betula_editor",
  "betula_enigo",
  "betula_hotkey",
  "betula_std",
  "betula_demo",
  "betula_wm",
  "betula_image",
  "betula_overlay",
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
#[profile.dev]
# Enable some optimisations, but not all of it.
#opt-level = 2
# Only using line numbers as debug information shaves off 10 seconds on linking the viewer.
#debug = 1
# Disable lto, it's slow for development
#lto = false

[workspace.dependencies]
betula_core = { version = "0.0.2", path = "betula_core", default-features = false }
betula_image = { version = "0.0.2", path = "betula_image", default-features = false }
betula_editor = { version = "0.0.2", path = "betula_editor", default-features = false }
betula_common = { version = "0.0.2", path = "betula_common", default-features = false }
betula_enigo = { version = "0.0.2", path = "betula_enigo", default-features = false }
betula_std = { version = "0.0.2", path = "betula_std", default-features = false }
betula_hotkey = { version = "0.0.2", path = "betula_hotkey", default-features = false }
betula_demo = { version = "0.0.2", path = "betula_demo", default-features = false }
betula_wm = { version = "0.0.2", path = "betula_wm", default-features = false }
betula_overlay = { version = "0.0.2", path = "betula_overlay", default-features = false }

#egui = { version = "0.33", features=["serde"] }
#eframe = { version = "0.33",  features = ["glow", "serde", "persistence"]  }
#egui-snarl = {version="0.9.0", features=["serde"]}
egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "02fa9fbe186f1f2f27f9f5d6cad4c7099c4b11ab", features=["serde"]}
#egui-snarl = {version="0.9.0", features=["serde"]}

eframe = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8",  features = ["glow", "serde", "persistence"]  }
egui = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8", features=["serde"] }
#egui_extras = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8",  features=["image"]}

screen_overlay = { git = "https://github.com/iwanders/screen_overlay", rev="bc20df85caade1e48c9ba21d25f796cfc3f1c350"  }
#screen_overlay = {path="../../screen_overlay/repo/"}
