[workspace]
resolver = "2"

members = [
  "betula_core",
  "betula_common",
  "betula_editor",
  "betula_enigo",
  "betula_hotkey",
  "betula_std",
  "betula_demo",
  "betula_wm",
  "betula_image",
  "betula_overlay",
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
#[profile.dev]
# Enable some optimisations, but not all of it.
#opt-level = 2
# Only using line numbers as debug information shaves off 10 seconds on linking the viewer.
#debug = 1
# Disable lto, it's slow for development
#lto = false

[workspace.dependencies]
betula_core = { version = "0.0.2", path = "betula_core", default-features = false }
betula_image = { version = "0.0.2", path = "betula_image", default-features = false }
betula_editor = { version = "0.0.2", path = "betula_editor", default-features = false }
betula_common = { version = "0.0.2", path = "betula_common", default-features = false }
betula_enigo = { version = "0.0.2", path = "betula_enigo", default-features = false }
betula_std = { version = "0.0.2", path = "betula_std", default-features = false }
betula_hotkey = { version = "0.0.2", path = "betula_hotkey", default-features = false }
betula_demo = { version = "0.0.2", path = "betula_demo", default-features = false }
betula_wm = { version = "0.0.2", path = "betula_wm", default-features = false }
betula_overlay = { version = "0.0.2", path = "betula_overlay", default-features = false }

#egui = { version = "0.33", features=["serde"] }
#eframe = { version = "0.33",  features = ["glow", "serde", "persistence"]  }
#egui-snarl = {version="0.9.0", features=["serde"]}
egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "116991c3724351ff0a84f64bc0531c99c05a503e", features=["serde"]}
#egui-snarl = { path="../../egui-snarl/", features=["serde"]}
#egui-snarl = {version="0.9.0", features=["serde"]}

eframe = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8",  features = ["glow", "serde", "persistence"]  }
egui = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8", features=["serde"] }
#egui_extras = {git="https://github.com/emilk/egui.git", rev="f714380b66a44dac9a3a1832df45aaf8760c29b8",  features=["image"]}

screen_overlay = { git = "https://github.com/iwanders/screen_overlay", rev="f4b141fc2b53f9f0c6d4f364b36bae71330f55ab"  }
#screen_overlay = {path="../../screen_overlay/repo/"}
#screen_overlay = {path="../../rust/windows_overlay/"}


# Patch for https://github.com/emilk/egui/issues/3632#issuecomment-3733528750
[patch.'https://github.com/emilk/egui.git']
egui = { git = 'https://github.com/iwanders/emilk_egui.git', rev="606a659c95440b54229796e94a0038472dee61f8" }
eframe = { git = 'https://github.com/iwanders/emilk_egui.git', rev="606a659c95440b54229796e94a0038472dee61f8" }
