[package]
name = "betula_common"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
betula_core = { workspace = true, default-features = false }
serde =  { version = "1.0", features = ["derive"] }
erased-serde = "0.4"


[dev-dependencies]
uuid = {version = "1.8.0", features=["v4"]}
serde_yaml = "0.9.33"
