[package]
name = "betula_common"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
betula_core = { workspace = true, default-features = false }
serde =  { version = "1.0", features = ["derive"] }
erased-serde = "0.4"
serde_json = "1.0.115"
parking_lot = {version="0.12.2", features=["arc_lock"]}

[dev-dependencies]
uuid = {version = "1.8.0", features=["v4"]}
betula_std = { workspace = true }
#serde_yaml = "0.9.33"
