[package]
name = "betula_core"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
uuid = {version="1.8.0", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
uuid = {version = "1.8.0", features=["v4"]}
betula_std = { workspace = true  }

