[package]
name = "betula_demo"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
betula_common = { workspace = true }
betula_core = { workspace = true }
betula_editor = { workspace = true }
betula_enigo = { workspace = true, features=["betula_editor"] }
betula_wm = { workspace = true, features=["betula_editor"] }
betula_std = { workspace = true, features=["betula_editor"] }
betula_hotkey = { workspace = true, features=["betula_editor"] }
eframe = { version = "0.26", features = ["serde", "persistence"] }
egui = { version = "0.26" }
