[package]
name = "betula_demo"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
betula_common = { workspace = true }
betula_core = { workspace = true }
betula_editor = { workspace = true }
betula_enigo = { workspace = true, features=["betula_editor"] }
betula_wm = { workspace = true, features=["betula_editor"] }
betula_std = { workspace = true, features=["betula_editor"] }
betula_hotkey = { workspace = true, features=["betula_editor"] }
betula_image = { workspace = true, features=["betula_editor", "betula_enigo"] }
betula_overlay = { workspace = true, features=["betula_editor"] }
eframe = { workspace = true }
egui = { workspace = true }

[features]
overlay_client_server = ["betula_overlay/use_client_server"]
