[package]
name = "betula_editor"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
#egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "5def797fc5396b68c2824da645c8f0993ed6c593", features=["serde"]}
#egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "2fbff0a5bcdd6be324b171fbbf0ccfa4e4d0764b", features=["serde"]}
#egui-snarl = { path="../../../egui-snarl/", features=["serde"]}
egui-snarl = { workspace = true }
betula_common = { workspace = true, default-features = false }
betula_core = { workspace = true, default-features = false }
egui = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.8.0", features=["v4"]}
eframe = { workspace=true }
rfd = "0.14.1"
smol = "2.0.0"
serde_json = { version = "1.0" }

# For loading icons.
# svg runs into https://github.com/emilk/egui/issues/3501
#egui_extras = { version = "0.26", features = ["svg"] }
#image = { version = "0.24", features = ["png"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
betula_std = { workspace = true, features=["betula_editor"] }
