[package]
name = "betula_egui"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "792eb233b082c6393c28f5414c7e1c1fbb28f787"}
betula_common = { workspace = true, default-features = false }
betula_core = { workspace = true, default-features = false }
egui = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.8.0", features=["v4"]}

[dev-dependencies]
uuid = {version = "1.8.0", features=["v4"]}
eframe = { version = "0.26", features = ["serde", "persistence"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
