[package]
name = "betula_egui"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
egui-snarl = { git = "https://github.com/iwanders/egui-snarl.git", rev = "f0995696fb19305ee133e3fd669b7079bf6ccf0f", features=["serde"]}
betula_common = { workspace = true, default-features = false }
betula_core = { workspace = true, default-features = false }
egui = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.8.0", features=["v4"]}
eframe = { version = "0.26", features = ["serde", "persistence"] }
rfd = "0.14.1"
smol = "2.0.0"
serde_json = { version = "1.0" }

# For loading icons.
# svg runs into https://github.com/emilk/egui/issues/3501
#egui_extras = { version = "0.26", features = ["svg"] }
#image = { version = "0.24", features = ["png"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
