[package]
name = "betula_enigo"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"


[features]
default = []

[dependencies]
betula_core = { workspace = true, default-features = false }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }
enigo = {version = "0.2.1", features = ["serde"] }
#enigo = { git = "https://github.com/iwanders/enigo", rev="6dec1e29b355d7df1f3d4821b90e2204aa5273df", features = ["serde"]  }
toml = {version = "0.8.12" }

