[package]
name = "betula_focus"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_egui = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(any(target_os = "linux"))'.dependencies]
x11-dl = "2.21"
