[package]
name = "betula_image"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

screen_capture = { git = "https://github.com/iwanders/screen_capture", rev="4b47ba9907ab59f9f65d9d3f6ba5faa71f2188d6" }

image = { version ="0.25.1", default-features=false}
