[package]
name = "betula_image"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

screen_capture = { git = "https://github.com/iwanders/screen_capture", rev="5681c388a70445f60956e6c7b323f455568c0db6" }

image = { version ="0.25.1", default-features=false, features=["png"]}
toml = {version = "0.8.12" }


betula_enigo = { workspace = true, default-features = false, optional=true}

[dev-dependencies]
clap = {version="4.5.4", features=["std"]}
