[package]
name = "betula_image"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_common = { workspace = true, default-features = false }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

screen_capture = { git = "https://github.com/iwanders/screen_capture", rev="d5726960d3cb979823fdee6abe3eb6cd4527d595" }

image = { version ="0.25.1", default-features=false, features=["png"]}
toml = {version = "0.8.12" }

threadpool = "1.8.1"

betula_enigo = { workspace = true, default-features = false, optional=true}

[dev-dependencies]
clap = {version="4.5.4", features=["std"]}
