[package]
name = "betula_overlay"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_common = { workspace = true, default-features = false }
egui = { workspace = true  }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

screen_overlay = {  workspace = true }

image = { version ="0.25.1", default-features=false, features=["png"]}
toml = {version = "0.8.12" }



#[dev-dependencies]
#clap = {version="4.5.4", features=["std"]}
