[package]
name = "betula_overlay"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_common = { workspace = true, default-features = false }
egui = { workspace = true  }
eframe = { workspace = true , optional=true }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }

screen_overlay = {  workspace = true }

image = { version ="0.25.1", default-features=false, features=["png"]}
toml = {version = "0.8.12" }

serde_json = {version="1.0", optional=true}



clap = { version = "4.5", features = ["derive"], optional=true }

[features]
default = ["use_client_server"]
use_client_server  = ["dep:serde_json", "dep:clap", "dep:eframe"]

[[bin]]
name = "overlay_daemon"
path = "src/client_server/daemon.rs"
required-features = ["use_client_server"]

[[bin]]
name = "overlay_client"
path = "src/client_server/client.rs"
required-features = ["use_client_server"]
