[package]
name = "betula_wm"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"


[dependencies]
betula_core = { workspace = true, default-features = false }
betula_editor = { workspace = true, default-features = false, optional=true}
serde =  { version = "1.0", features = ["derive"] }
regex = "1.10.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(any(target_os = "linux"))'.dependencies]
x11-dl = "2.21"
